--- a/frontend/src/app/forms/side-menu/side-menu.component.scss
+++ b/frontend/src/app/forms/side-menu/side-menu.component.scss
@@ -1,3 +1,17 @@
-.font25 {
-  font-size: 25px;
+.side-menu-container {
+  padding: 2rem;
+}
+.side-menu-headline {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+ion-item {
+  // A "hack" to make sure the element is aligned completely to the left.
+  --ion-safe-area-left: 0;
+}
+ion-label {
+  font-size: 20px !important;
+  font-weight: 500;
+  letter-spacing: 3px;
 }
