--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -4,10 +4,14 @@ html.ios {
   --ion-default-font: 'Roboto', sans-serif;
 }
 
+/*
+  Typography
+*/
 h1 {
   font-size: 39px;
   letter-spacing: 4px;
-  font-weight: 400;
+  font-weight: 500;
+  margin-bottom: 16px;
 }
 
 h2 {
@@ -27,12 +31,42 @@ h3 {
   color: var(--ion-color-primary);
 }
 
+/*
+  .description is for inline text,
+  .main-description is for a block element (e.g. div) that holds multiple headings, span elements, etc.
+*/
+.description,
+.main-description {
+  font-size: 18px;
+  line-height: 1.618;
+  color: var(--ion-color-primary);
+}
+.main-description {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+/*
+  Lists
+*/
+
 ion-list-header {
   font-size: 23px;
   font-weight: 400;
   margin-top: 2rem;
   --color: var(--ion-color-primary);
 }
+
+/*
+  Items
+*/
+ion-item.item-has-focus {
+  --border-color: var(--ion-color-primary);
+}
+
+/*
+  Buttons
+*/
 
 .fancy-button {
   font-size: 26px;
@@ -50,12 +84,21 @@ ion-list-header {
   margin-bottom: 2rem;
 }
 
+/*
+  Containers and Layout
+*/
+
 .main-container {
   width: 100%;
   max-width: 475px;
   margin-right: auto;
   margin-left: auto;
   padding: 1.5rem;
+}
+@media (min-width: 450px) {
+  .main-container .main-description {
+    text-align: center;
+  }
 }
 
 /*
