--- a/frontend/src/app/forms/steps/basic-info/basic-info.component.html
+++ b/frontend/src/app/forms/steps/basic-info/basic-info.component.html
@@ -1,15 +1,11 @@
+<div class="main-description">
+  <h1>Welcome!</h1>
+
+  So that we can get to know you better, please provide your first and last
+  name.
+</div>
+
 <ion-list>
-  <ion-item lines="none" class="ion-no-border ion-no-padding">
-    <h1>Welcome!</h1>
-  </ion-item>
-
-  <ion-item lines="none" class="ion-no-padding">
-    <h2 class="ion-text-justify">
-      So that we can get to know you better, please provide your first and last
-      name.
-    </h2>
-  </ion-item>
-
   <ion-item class="ion-no-padding">
     <ion-label color="medium">Title</ion-label>
     <ion-select
