--- a/frontend/src/app/forms/steps/submit-page/submit-page.component.html
+++ b/frontend/src/app/forms/steps/submit-page/submit-page.component.html
@@ -1,12 +1,8 @@
-<ion-list>
-  <ion-item lines="none" class="ion-no-border">
-    <h1>Submit</h1>
-  </ion-item>
+<div class="main-description">
+  <h1>Submit</h1>
 
-  <ion-item lines="none">
-    <h2 class="ion-text-justify">
-      That's it! You can now submit your application and hand the device back to
-      our team.
-    </h2>
-  </ion-item>
-</ion-list>
+  <span
+    >That's it! You can now submit your application and hand the device back to
+    our team.</span
+  >
+</div>
