Small formatting improvement

--- a/frontend/src/app/forms/steps/submit-page/submit-page.component.html
+++ b/frontend/src/app/forms/steps/submit-page/submit-page.component.html
@@ -1,8 +1,8 @@
 <div class="main-description">
   <h1>Submit</h1>
 
-  <span
-    >That's it! You can now submit your application and hand the device back to
-    our team.</span
-  >
+  <span>
+    That's it! You can now submit your application and hand the device back to
+    our team.
+  </span>
 </div>
