Small UI improvements for the confirmation page. Route to the rating page when clicking on the Continue button.

--- a/frontend/src/app/forms/confirmation/confirmation.page.html
+++ b/frontend/src/app/forms/confirmation/confirmation.page.html
@@ -1,23 +1,21 @@
 <ion-content>
-  <div class="main-cantainer">
-    <div class="message-content">
-      <ion-item lines="none" class="ion-no-border ion-no-padding">
+  <div class="main-container with-bottom-buttons">
+    <div class="content">
+      <div class="main-description">
         <h1>Done</h1>
-      </ion-item>
 
-      <ion-item lines="none" class="ion-no-padding">
-        <h2 class="ion-text-justify">
-          The application has been submitted. The following steps need to be
-          perofrmed by the HR staff(either now or later).
-        </h2>
-      </ion-item>
+        The application has been submitted. The following steps need to be
+        performed by the HR staff (either now or later).
+      </div>
     </div>
-    <div class="button-container">
+
+    <div class="buttons-container">
       <button class="fancy-button align center" (click)="navigateToNextPage()">
         Continue
       </button>
+
       <button
-        class="fancy-button align center secondary-color"
+        class="fancy-button align center second-button"
         (click)="quitPage()"
       >
         Quit
