Basic layout for fields and designation page added

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -50,6 +50,12 @@
           *ngSwitchCase="APPLICATION_STEP.Submit"
         >
         </form-submit-page>
+
+        <form-field-designation-page
+          [formsData]="formsData"
+          *ngSwitchCase="APPLICATION_STEP.FieldDesignationPreference"
+        >
+        </form-field-designation-page>
       </ng-container>
     </div>
 
