Basic configurations and setup of the page

--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -30,6 +30,16 @@
           }"
         ></ng-container>
 
+        <ng-container
+          [ngTemplateOutlet]="menuItem"
+          [ngTemplateOutletContext]="{
+            step: APPLICATION_STEP.EducationInformation,
+            displayName: 'Education Information',
+            isValid: formsData.controls.contactInfo.valid,
+            isActive: currentStep === APPLICATION_STEP.EducationInformation
+          }"
+        ></ng-container>
+
         <ion-menu-toggle>
           <ion-item
             (click)="navigateToStep(APPLICATION_STEP.Submit)"
