--- a/frontend/src/app/forms/steps/education-info/education-info.component.html
+++ b/frontend/src/app/forms/steps/education-info/education-info.component.html
@@ -1,3 +1,5 @@
-<p>
-  education-info works!
-</p>
+<div class="main-description">
+  <h1>Education Info page</h1>
+
+  This page is still in construction
+</div>
