--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -44,7 +44,11 @@
           *ngSwitchCase="APPLICATION_STEP.ContactInformation"
         >
         </form-contact-info>
-
+        <form-education-info
+          [formsData]="formsData"
+          *ngSwitchCase="APPLICATION_STEP.EducationInformation"
+        >
+        </form-education-info>
         <form-submit-page
           [formsData]="formsData"
           *ngSwitchCase="APPLICATION_STEP.Submit"
