HTML files updated

--- a/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
+++ b/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
@@ -1,9 +1,10 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button>
-        <ion-icon name="Save"></ion-icon>
-      </ion-button>
+      <ion-icon name="Save"></ion-icon>
+    </ion-buttons>
+    <ion-buttons slot="start">
+      <ion-icon name="Save"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
