--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -129,7 +129,8 @@ ion-item.item-has-focus {
   Customization of the Popover in the dropdownmenu of the field-designation.page
 */
 .custom-popover {
-  [aria-checked='true'].sc-ion-alert-ios .alert-checkbox-icon.sc-ion-alert-ios {
+  [aria-checked='true'].sc-ion-alert-ios .alert-checkbox-icon.sc-ion-alert-ios,
+  [aria-checked='true'].sc-ion-alert-md .alert-checkbox-icon.sc-ion-alert-md {
     border-color: var(--ion-color-tertiary);
     background-color: var(--ion-color-contrast);
   }
@@ -140,8 +141,8 @@ ion-item.item-has-focus {
     white-space: pre-wrap;
   }
 
-  [aria-checked='true'].sc-ion-alert-ios
-    .alert-checkbox-inner.sc-ion-alert-ios {
+  [aria-checked='true'].sc-ion-alert-ios .alert-checkbox-inner.sc-ion-alert-ios,
+  [aria-checked='true'].sc-ion-alert-md .alert-checkbox-inner.sc-ion-alert-md {
     border-color: var(--ion-color-tertiary);
   }
 }
