--- a/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
+++ b/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
@@ -10,43 +10,80 @@
   <div class="content">
     <ng-container>
       <ion-content>
-        <ion-list>
-          <ion-item class="ion-no-padding">
-            <ion-label position="floating" color="medium"
-              >School/University</ion-label
-            >
-            <ion-input type="text"></ion-input>
-          </ion-item>
-          <ion-item class="ion-no-padding">
-            <ion-label position="floating" color="medium"
-              >Subject/Degree</ion-label
-            >
-            <ion-input type="text"></ion-input>
-          </ion-item>
-          <ion-item class="ion-no-padding">
-            <ion-label position="floating" color="medium"
-              >Type of Education</ion-label
-            >
-            <ion-select interface="popover">
-              <ion-select-option
-                *ngFor="let degree of degreeTypeArray"
-                [value]="degree.value"
-              >
-                {{ degree.displayName }}</ion-select-option
-              >
-            </ion-select>
-          </ion-item>
-          <ion-item class="ion-no-padding">
-            <ion-label position="floating" color="medium">Grade</ion-label>
-            <ion-input type="text"></ion-input>
-          </ion-item>
-          <ion-item class="ion-no-padding">
-            <ion-label position="floating" color="medium"
-              >Graduation date</ion-label
-            >
-            <ion-input type="text"></ion-input>
-          </ion-item>
-        </ion-list>
+        <ion-grid>
+          <ion-row>
+            <ion-col size=".75">
+              <ion-label color="medium"
+                ><ion-icon name="business-outline"></ion-icon
+              ></ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label position="floating" color="medium"
+                  >School/University</ion-label
+                ><ion-input type="text"></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size=".75">
+              <ion-label color="medium"
+                ><ion-icon name="book-outline"></ion-icon
+              ></ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label position="floating" color="medium">Degree</ion-label
+                ><ion-input type="text"></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size=".75">
+              <ion-label color="medium"
+                ><ion-icon name="school-outline"></ion-icon
+              ></ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label position="floating" color="medium"
+                  >Type of Education</ion-label
+                ><ion-input type="text"></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size=".75">
+              <ion-label color="medium"
+                ><ion-icon name="ribbon-outline"></ion-icon
+              ></ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label position="floating" color="medium">Grade</ion-label
+                ><ion-input type="text"></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size=".75">
+              <ion-label color="medium"
+                ><ion-icon name="time-outline"></ion-icon
+              ></ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label position="floating" color="medium"
+                  >Graduation Date</ion-label
+                ><ion-input type="text"></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-content>
     </ng-container>
   </div>
