FormArray of FormGroup Data type supported

--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -35,7 +35,7 @@
           [ngTemplateOutletContext]="{
             step: APPLICATION_STEP.EducationInformation,
             displayName: 'Education Information',
-            isValid: formsData.controls.contactInfo.valid,
+            isValid: formsData.controls.educationInfo.valid,
             isActive: currentStep === APPLICATION_STEP.EducationInformation
           }"
         ></ng-container>
