--- a/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
+++ b/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
@@ -4,110 +4,80 @@
       <ion-button (click)="cancel()">Cancel</ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button [disabled]="!edu.valid" (click)="save()">Save</ion-button>
+      <ion-button [disabled]="!education.valid" (click)="save()"
+        >Save</ion-button
+      >
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<div class="main-container with-bottom-buttons">
-  <div class="content">
-    <ng-container>
-      <ion-content>
-        <ion-grid>
-          <ion-row>
-            <ion-col size=".75">
-              <ion-label color="medium"
-                ><ion-icon name="business-outline"></ion-icon
-              ></ion-label>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-label position="floating" color="medium"
-                  >School/University</ion-label
-                ><ion-input type="text" [formControl]="edu.controls.university">
-                </ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
+<ion-content>
+  <div class="main-container with-bottom-buttons">
+    <ion-list>
+      <div>
+        <ion-icon item-left name="business-outline" size="large"></ion-icon>
+        <ion-item style="display: inline-block;">
+          <ion-label class="item item-input" position="floating" color="medium"
+            >School/University</ion-label
+          >
+          <ion-input type="text" [formControl]="education.controls.university">
+          </ion-input>
+        </ion-item>
+      </div>
 
-          <ion-row>
-            <ion-col size=".75">
-              <ion-label color="medium"
-                ><ion-icon name="book-outline"></ion-icon
-              ></ion-label>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-label position="floating" color="medium">Degree</ion-label
-                ><ion-input
-                  type="text"
-                  [formControl]="edu.controls.degree"
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
+      <div>
+        <ion-icon item-left name="book-outline" size="large"></ion-icon>
+        <ion-item style="display: inline-block;">
+          <ion-label position="floating" color="medium"> Subject</ion-label>
+          <ion-input
+            type="text"
+            [formControl]="education.controls.subject"
+          ></ion-input>
+        </ion-item>
+      </div>
 
-          <ion-row>
-            <ion-col size=".75">
-              <ion-label color="medium"
-                ><ion-icon name="school-outline"></ion-icon
-              ></ion-label>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-label position="floating" color="medium"
-                  >Type of Education</ion-label
-                ><ion-select
-                  interface="popover"
-                  [formControl]="edu.controls.typeOfDegree"
-                >
-                  <ion-select-option
-                    *ngFor="let degree of degreeTypeArray"
-                    [value]="degree.value"
-                  >
-                    {{ degree.displayName }}</ion-select-option
-                  >
-                </ion-select>
-              </ion-item>
-            </ion-col>
-          </ion-row>
+      <div>
+        <ion-icon item-left name="school-outline" size="large"></ion-icon>
+        <ion-item style="display: inline-block;">
+          <ion-label position="floating" color="medium">Degree</ion-label
+          ><ion-select
+            interface="popover"
+            [formControl]="education.controls.degree"
+          >
+            <ion-select-option
+              *ngFor="let degree of degreeTypeArray"
+              [value]="degree.value"
+            >
+              {{ degree.displayName }}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
+      </div>
 
-          <ion-row>
-            <ion-col size=".75">
-              <ion-label color="medium"
-                ><ion-icon name="ribbon-outline"></ion-icon
-              ></ion-label>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-label position="floating" color="medium">Grade</ion-label
-                ><ion-input
-                  type="text"
-                  [formControl]="edu.controls.grade"
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
+      <div>
+        <ion-icon item-left name="ribbon-outline" size="large"></ion-icon>
+        <ion-item style="display: inline-block;">
+          <ion-label position="floating" color="medium">Grade</ion-label
+          ><ion-input
+            type="number"
+            [formControl]="education.controls.grade"
+          ></ion-input>
+        </ion-item>
+      </div>
 
-          <ion-row>
-            <ion-col size=".75">
-              <ion-label color="medium"
-                ><ion-icon name="time-outline"></ion-icon
-              ></ion-label>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-label position="floating" color="medium"
-                  >Graduation Date</ion-label
-                ><ion-input
-                  type="text"
-                  [formControl]="edu.controls.gradDate"
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-content>
-    </ng-container>
+      <div>
+        <ion-icon item-left name="time-outline" size="large"></ion-icon>
+        <ion-item style="display: inline-block;">
+          <ion-label position="floating" color="medium"
+            >Graduation Date</ion-label
+          ><ion-datetime
+            displayFormat="YYYY"
+            max="2030"
+            min="2000"
+            [formControl]="education.controls.graduationYear"
+          ></ion-datetime>
+        </ion-item>
+      </div>
+    </ion-list>
   </div>
-</div>
+</ion-content>
