--- a/frontend/src/app/forms/steps/education-info/education-info.component.scss
+++ b/frontend/src/app/forms/steps/education-info/education-info.component.scss
@@ -1,17 +1,15 @@
 .plus-button {
-  font-size: 40px;
-  color: var(--ion-color-secondary-contrast);
-  //background: var(--ion-color-secondary);
-  //padding: 1rem;
-  //border-radius: 0px 1000px 1000px 1000px;
-  width: 120px;
-  height: 120px;
-  //border-radius: 1000px 1000px 1000px 1000px;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
+  width: 80px;
+  height: 80px;
+  --border-radius: 50%;
+
+  --padding-start: 10px;
+  --padding-end: 10px;
+  font-size: 50px;
 }
-.plus-button[disabled] {
-  opacity: 0.2;
+.button-container {
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
 }
