displayName changes done

--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -33,7 +33,7 @@
           [ngTemplateOutlet]="menuItem"
           [ngTemplateOutletContext]="{
             step: APPLICATION_STEP.FieldDesignationPreference,
-            displayName: 'Fields and Designation',
+            displayName: 'Industries and Positions',
             isValid: formsData.controls.fieldDesignationInfo.valid,
             isActive:
               currentStep === APPLICATION_STEP.FieldDesignationPreference
