--- a/frontend/src/app/forms/steps/education-info/education-info.component.html
+++ b/frontend/src/app/forms/steps/education-info/education-info.component.html
@@ -32,7 +32,7 @@
         <p>
           <ion-icon name="school-outline"></ion-icon>
           {{ data.controls.degree.value }}'s degree ({{
-            data.controls.graduationYear.value.substr(0, 4)
+            data.controls.graduationYear.value
           }}, {{ data.controls.grade.value }})
         </p>
       </ion-label>
